@@ -1,3 +1,8 @@
+2009-02-02  Juanma Barranquero  <lekktu@gmail.com>
+
+	* haskell-doc.el (haskell-doc-imported-list): Don't add current buffer
+	to the imported file list if it is not (yet?) visiting a file.
+
 2009-02-02  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* haskell-indent.el (haskell-indent-thenelse): New var.
